Fixed spacing issues article page

--- a/plugins/knowledge/src/scss/base/_typography.scss
+++ b/plugins/knowledge/src/scss/base/_typography.scss
@@ -12,6 +12,10 @@
   font-size: $global-title_fontSize;
 }
 
+.pageTitleContainer-metas {
+    margin-top: $global-gutter_quarterSize;
+}
+
 .pageSubTitle {
   font-size: $global-subTitle_fontSize;
 }
